force-app/main/default/objects/Billing_Approval_Audit__c/Billing_Approval_Audit__c.object-meta.xml
<CustomObject>
    <label>Billing Approval Audit</label>
    <nameField>
        <displayFormat>BAA-{00000}</displayFormat>
        <label>Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Approval Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>