force-app/main/default/objects/Billing_Approval_Audit__c/fields/Action_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Action_Date_Time__c</fullName>
    <label>Action Date/Time</label>
    <type>DateTime</type>
</CustomField>