force-app/main/default/objects/Billing_Approval_Audit__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Billing Approval Audits</relationshipLabel>
    <relationshipName>Billing_Approval_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>